[metadata]
name = link-learn
version = v2023.1002-alpha
description = This package enables link prediction in networks with scikit-learn like API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Siva227/link-learn
author = Siva Sankar Emany
author_email = "Siva Sankar Emany" <sankaremany@gmail.com>
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src
exclude =
    test*